--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-
 <center><h2>Calculator</h2></center>
 <hr>
 <p>&nbsp;</p>
@@ -33,10 +32,16 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-
-
-
-
+<center><h2>Well this is meta... </h2></center>
+<hr>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<img src="web.png" alt="web.png" class="center">
+<center><p>Welcome to my website! yes this is it. well part of it I made the website a few years back because it was always a dream of mine as a kid to have a website.</p></center>
+<center><p>my homepage is VERY boring and empty but th part I am most proud of is DirtyCornersOfDorset which is my art project I started in 2019 have a look :).</p></center>
+<center><a href="https://zombieneo.github.io/DirtyCornersOfDorset/">DirtyCornersOfDorset</a></center>
+<center><p>Its nothing special but I coded it all by myself.</p></center>
 
 
 
