--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<img src="LOGO.jpg" alt="logo" class="center">
+<img src="logo.jpg" alt="logo" class="center">
 
 <center><h1>Welcome to my GitHub portfolio!</h1></center>
 
