Cool logo thing

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
 <body>
 
-
-
-<img src="logo.gif" alt="logo" class="center">
+<img src="0.gif" alt="logo" class="center" onmouseover="this.src='2.gif'" onmouseout="this.src='3.gif'" class=hover>
 
 <center><h1>Welcome to my GitHub portfolio!</h1></center>
 
