--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-
-<img src="0.gif" alt="logo" class="center" onmouseover="this.src='2.gif'" onmouseout="this.src='3.gif'" class=hover>
-
+<!--<img src="0.gif" alt="logo" class="center" onmouseover="this.src='2.gif'" onmouseout="this.src='3.gif'" class=hover>-->
+<!--<^the old one MAY CHANGE>-->
+<img src="banner.gif" alt="calc.png" class="center">
 <center><h1>Welcome to my GitHub portfolio!</h1></center>
 
 
